fix:Java 21 URL构造